--- a/_posts/2022-06-28-test-post.markdown
+++ b/_posts/2022-06-28-test-post.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  Test Post
 date:   2022-06-28 15:05:55 +0300
-image:  /assets/images/blog/test.png
+image:  assets/images/backgrounds/abstract2.jpeg
 author: Emil Skydsgaard
 tags:   Test
 ---
